added deployment process.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "commander": "*",
     "url": "*",
     "path":"*",
-    "mime":"*"
-
+    "mime":"*",
+    "openurl":"*",
+    "jsonfile":"*"
   }
 }
